--- a/carrito.css
+++ b/carrito.css
@@ -187,44 +187,11 @@ footer{
    }
 }
 
-.vistapc{
-    display: none;
-}
 @media only screen and (min-width:500px){
-    .vistamovil{
+    body{
+        width: 50%;
+    }    
+    footer{
         display: none;
     }
-
-    .vistapc{
-        display: inline;
-    header{
-        background-color: #6a0115;
-        width: 100%;    
-        height: 150px;
-    }
-    div{
-        display: flex;
-        justify-content: center;
-    }
-    
-    main{
-        font-family: "Bebas Neue", sans-serif;
-        font-weight: 400;
-        font-style: normal;
-        font-size: 45px;
-        color: white;
-        display: flex;
-        text-align: center;
-        justify-content: center;
-    }
-    img{
-        transition-duration: 5s;
-    }
-    img:hover{
-        padding: 5%;
-        background-color: rgb(0, 0, 0 /50%);
-    }
-    
-}
-    
 }
