--- a/index.css
+++ b/index.css
@@ -8,14 +8,6 @@
   font-weight: 500;
   font-style: normal;
 }
-#container {
-  display: grid;
-  grid-template-areas:
-    "header"
-    "navbar"
-    "main"
-    "footer";
-}
 body {
   height: 110%;
 }
@@ -338,14 +330,13 @@ main {
   .container-card{
     width: 100%;
     display: flex;
-    flex-direction: column;
-
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+    justify-content: space-around;    
   }
   .container-card .card{
-    width: 20%;
+    padding: 3%;
+    width: 25%;
     float: left;
     box-sizing: border-box;
     text-align: center;
