--- a/index.css
+++ b/index.css
@@ -84,85 +84,142 @@ nav {
   }
 }
 main {
-  #art1 {
-    margin-bottom: 50%;
+  .container-cardM {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
   }
-  h1 {
-    margin-top: 10%;
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 45px;
-  }
-
-  .articulos {
-    color: white;
-    margin-bottom: 15%;
-    display: grid;
-    grid-template-columns: 49% 49%;
-    row-gap: 2%;
-    column-gap: 2%;
+  .container-cardM .cardM {
+    padding: 3%;
+    width: 100%;
+    float: left;
+    box-sizing: border-box;
     text-align: center;
-
-    img {
-      width: 100%;
-      height: 45%;
-    }
-
-    .articulos:hover {
-      background-color: gray;
-      padding: 2%;
-    }
-    .articulosdestacados {
-      font-size: 16px;
-      background-color: rgb(0, 0, 0);
-      border: 2px solid rgb(173, 160, 160);
-      border-radius: 10%;
-      height: 110%;
-    }
-    .articulosnormales {
-      text-align: center;
-      font-size: 16px;
-      background-color: rgb(0, 0, 0);
-      border: 2px solid rgb(173, 160, 160);
-      border-radius: 10%;
-      height: 110%;
+    position: relative;
+    cursor: pointer;
+  }
+  .cardM .boxM {
+    width: auto;
+    height: auto;
+    transition: 0.5s;
+    transition: transform 0.5s ease;
+    &:hover {
+      transform: scale(1.1);
     }
   }
-  #mainstart {
-    color: white;
-    text-align: center;
-    .referencia {
-      height: 20%;
-      width: 100%;
-      align-items: center;
-    }
+  .cardM.box.box1M {
+    position: relative;
+    background: #6a0115;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(10%);
+  }
+}
+.cardM:hover .box.box1M {
+  opacity: 0.5;
+  transform: translateY(0);
+}
+.contentM {
+  img {
+    width: 50%;
+  }
+  .cardM.box.box2M {
+    position: relative;
+    background: #6a0115;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    transform: translateY(10%);
+  }
+  .cardM:hover .box.box2M {
+    box-shadow: 0 2px 15px 2px #fff;
+    transform: translateY(0);
+  }
+}
 
-    .precio {
-      background-color: #c20000;
-      font-family: "Times New Roman", Times, serif;
-    }
-    .comprar {
-      display: flex;
-      width: 100%;
-      height: 15%;
-      justify-content: center;
-      align-items: center;
-    }
-    .botoncompra {
-      display: flex;
-      align-items: center;
-      margin-top: 4%;
-      color: black;
-      text-decoration: none;
-      background-color: white;
-      border-radius: 25%;
-      height: 50%;
-    }
-    .botoncompra:hoover {
-      background-color: gray;
-      padding: 2%;
-    }
+#art1 {
+  margin-bottom: 50%;
+}
+h1 {
+  margin-top: 10%;
+  font-family: "Bebas Neue", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 45px;
+}
+
+.articulos {
+  color: white;
+  margin-bottom: 15%;
+  display: grid;
+  grid-template-columns: 49% 49%;
+  row-gap: 2%;
+  column-gap: 2%;
+  text-align: center;
+
+  img {
+    width: 100%;
+    height: 45%;
+  }
+
+  .articulos:hover {
+    background-color: gray;
+    padding: 2%;
+  }
+  .articulosdestacados {
+    font-size: 16px;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(173, 160, 160);
+    border-radius: 10%;
+    height: 110%;
+  }
+  .articulosnormales {
+    text-align: center;
+    font-size: 16px;
+    background-color: rgb(0, 0, 0);
+    border: 2px solid rgb(173, 160, 160);
+    border-radius: 10%;
+    height: 110%;
+  }
+}
+#mainstart {
+  color: white;
+  text-align: center;
+  .referencia {
+    height: 20%;
+    width: 100%;
+    align-items: center;
+  }
+
+  .precio {
+    background-color: #c20000;
+    font-family: "Times New Roman", Times, serif;
+  }
+  .comprar {
+    display: flex;
+    width: 100%;
+    height: 15%;
+    justify-content: center;
+    align-items: center;
+  }
+  .botoncompra {
+    display: flex;
+    align-items: center;
+    margin-top: 4%;
+    color: black;
+    text-decoration: none;
+    background-color: white;
+    border-radius: 25%;
+    height: 50%;
+  }
+  .botoncompra:hoover {
+    background-color: gray;
+    padding: 2%;
   }
 }
 footer {
@@ -231,7 +288,6 @@ footer {
 
   .vistapc {
     display: inline;
-
     header {
       #headercontainer {
         background-color: #6a0115;
@@ -327,14 +383,14 @@ main {
     overflow: hidden;
     display: none;
   }
-  .container-card{
+  .container-card {
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;    
+    justify-content: space-around;
   }
-  .container-card .card{
+  .container-card .card {
     padding: 3%;
     width: 25%;
     float: left;
@@ -343,16 +399,16 @@ main {
     position: relative;
     cursor: pointer;
   }
-  .card .box{
+  .card .box {
     width: auto;
     height: auto;
-    transition: .5s;
+    transition: 0.5s;
     transition: transform 0.5s ease;
     &:hover {
       transform: scale(1.1);
     }
   }
-  .card.box.box1{
+  .card.box.box1 {
     position: relative;
     background: #6a0115;
     display: flex;
@@ -361,20 +417,22 @@ main {
     z-index: 1;
     transform: translateY(10%);
   }
-  .card:hover .box.box1{
-    opacity: .5;
+  .card:hover .box.box1 {
+    opacity: 0.5;
     transform: translateY(0);
   }
-  .content img{
+  .content {
+    img {
     width: 100%;
+    height: 15vw;
   }
-  .content h3{
+}
+  .content h3 {
     position: relative;
     top: -24px;
     text-align: center;
-
   }
-  .card.box.box2{
+  .card.box.box2 {
     position: relative;
     background: #6a0115;
     display: flex;
@@ -383,10 +441,8 @@ main {
     box-sizing: border-box;
     transform: translateY(10%);
   }
-  .card:hover .box.box2{
+  .card:hover .box.box2 {
     box-shadow: 0 2px 15px 2px #fff;
     transform: translateY(0);
   }
-
 }
-
