--- a/index.css
+++ b/index.css
@@ -12,104 +12,113 @@ body {
   height: 110%;
 }
 header {
-  .headerstart {
-    display: flex;
-    justify-content: space-between;
+  #headercontainer {
     background-color: #6a0115;
-    margin-bottom: 5%;
-
-    #opciones {
-      display: flex;
-      width: 15%;
-      height: 2%;
-      border-radius: 25%;
-    }
-    #logo {
-      display: flex;
-      justify-content: end;
-      border-radius: 25%;
-      width: 15%;
-      align-items: center;
-    }
-  }
-  .headerend {
-    color: white;
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    font-size: 50px;
-  }
-}
-nav {
-  margin-bottom: 10%;
-  display: flex;
-  #navleft {
-    background-color: white;
-    width: 96%;
-    height: 100%;
-    border-color: gray;
+    width: 100%;
+    height: 15vw;
     display: flex;
     flex-direction: row;
-    border-radius: 0% 25% 25% 0%;
+    justify-content: space-between;
+    color: #c20000;
   }
-  button {
-    background-color: transparent;
-    border: none;
-    width: 15%;
-    img {
-      display: flex;
-      width: 100%;
-      height: 100%;
+  #headerleft {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    h3 {
+      font-family: "Roboto", sans-serif;
+      font-weight: 500;
+      font-style: normal;
+      font-size: 25px;
     }
   }
+  img {
+    display: flex;
+    justify-content: end;
+    border-radius: 25%;
+    width: 65px;
+    align-items: center;
+  }
+}
+#headerright {
+  width: 50%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
   input {
-    align-items: start;
-    background-color: transparent;
-    font-size: 100%;
+    width: 60%;
+    border: none;
+    cursor: pointer;
+  }
+  button {
     height: 100%;
     border: none;
-    outline: none;
-  }
-  #navright {
-    display: flex;
-    justify-content: center;
-    width: 20%;
+    cursor: pointer;
+    background-color: #6a0115;
     img {
       display: flex;
       justify-content: end;
       border-radius: 25%;
-      width: 65px;
+      width: 25px;
       align-items: center;
     }
   }
 }
+#logocont {
+  img {
+    display: flex;
+    justify-content: end;
+    border-radius: 25%;
+    width: 65px;
+    align-items: center;
+  }
+}
+
+#TIT {
+  color: white;
+  justify-content: center;
+  font-family: "Bebas Neue", sans-serif, monospace;
+  font-weight: 400;
+  font-style: oblique;
+  font-size: 50px;
+
+  #pred {
+    color: #c20000;
+    font-family: "Bebas Neue", sans-serif, monospace;
+    font-weight: 400;
+  }
+}
+
+
 main {
-  .container-cardM {
+  .container-card {
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
   }
-  .container-cardM .cardM {
+  .container-card .card {
     padding: 3%;
-    width: 100%;
+    width: 50%;
     float: left;
     box-sizing: border-box;
     text-align: center;
     position: relative;
     cursor: pointer;
   }
-  .cardM .boxM {
+  .card .box {
     width: auto;
-    height: auto;
     transition: 0.5s;
     transition: transform 0.5s ease;
     &:hover {
       transform: scale(1.1);
     }
   }
-  .cardM.box.box1M {
+  .box.box1 {
+    height: 80%;
+  }
+  .card.box.box1 {
     position: relative;
     background: #6a0115;
     display: flex;
@@ -118,16 +127,21 @@ main {
     z-index: 1;
     transform: translateY(10%);
   }
-}
-.cardM:hover .box.box1M {
-  opacity: 0.5;
-  transform: translateY(0);
-}
-.contentM {
-  img {
-    width: 50%;
+
+  .card:hover .box.box1 {
+    opacity: 0.5;
+    transform: translateY(0);
   }
-  .cardM.box.box2M {
+  .content {
+    img {
+    width: 100%;
+    height: 15vw;
+  }
+} 
+  .box.box2{
+  height: 50%;  
+  } 
+  .card.box.box2 {
     position: relative;
     background: #6a0115;
     display: flex;
@@ -136,11 +150,11 @@ main {
     box-sizing: border-box;
     transform: translateY(10%);
   }
-  .cardM:hover .box.box2M {
+  .card:hover .box.box2 {
     box-shadow: 0 2px 15px 2px #fff;
     transform: translateY(0);
   }
-}
+
 
 #art1 {
   margin-bottom: 50%;
@@ -222,227 +236,140 @@ h1 {
     padding: 2%;
   }
 }
-footer {
-  background-color: #6a0115;
-  height: 15%;
-  border-radius: 30% 30% 0% 0%;
-  width: 96%;
-  position: fixed;
-  bottom: 0;
-  box-shadow: 0 0.5rem 4rem #ffffff;
-  font-family: "Bebas Neue", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  #footerstart {
-    height: 60%;
-    color: #c20000;
+}
+
+@media (min-width: 768px) {
+  header{
+  #headercontainer{
+    background-color: #6a0115;
+    width: 100%;
+    height: 5vw;
     display: flex;
     flex-direction: row;
-    align-items: end;
-    justify-content: space-around;
-    .cont-footerstart {
+    justify-content: space-between;
+    color: #c20000;
+
+    #headerleft {
       display: flex;
-      text-align: center;
+      flex-direction: row;
       align-items: center;
-      justify-content: center;
+      h3 {
+        font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+        font-size: 25px;
+      }
     }
     img {
-      width: 40%;
-      height: 5%;
-      border-radius: 50%;
-    }
-    #cart {
-      border-radius: 10%;
-    }
-    #notifications {
-      border-radius: 20%;
-    }
-  }
-  #footerend {
-    display: flex;
-    flex-direction: row;
-    align-items: start;
-    justify-content: space-around;
-    div {
-      width: 40%;
-      height: 5%;
-      color: white;
-      display: flex;
-      justify-content: center;
-    }
-  }
-  #footerstart img:hover {
-    background-color: gray;
-    padding: 3%;
-  }
-}
-
-.vistapc {
-  display: none;
-}
-
-@media only screen and (min-width: 500px) {
-  .vistamovil {
-    display: none;
-  }
-
-  .vistapc {
-    display: inline;
-    header {
-      #headercontainer {
-        background-color: #6a0115;
-        width: 100%;
-        height: 5vw;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        color: #c20000;
-      }
-      #headerleft {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        h3 {
-          font-family: "Roboto", sans-serif;
-          font-weight: 500;
-          font-style: normal;
-          font-size: 25px;
-        }
-      }
-      img {
-        display: flex;
-        justify-content: end;
-        border-radius: 25%;
-        width: 65px;
-        align-items: center;
-      }
-    }
-    #headerright {
-      width: 50%;
       display: flex;
       justify-content: end;
+      border-radius: 25%;
+      width: 65px;
       align-items: center;
-      input {
-        width: 60%;
-        border: none;
-        cursor: pointer;
-      }
-      button {
-        border: none;
-        cursor: pointer;
-        background-color: #6a0115;
-        img {
-          display: flex;
-          justify-content: end;
-          border-radius: 25%;
-          width: 40px;
-          align-items: center;
-        }
-      }
     }
-    #logocont {
+  }
+  #headerright {
+    width: 50%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    input {
+      width: 60%;
+      border: none;
+      cursor: pointer;
+    }
+    button {
+      height: 100%;
+      border: none;
+      cursor: pointer;
+      background-color: #6a0115;
       img {
         display: flex;
         justify-content: end;
         border-radius: 25%;
-        width: 65px;
+        width: 40px;
         align-items: center;
       }
     }
-
-    #TIT {
-      color: white;
-      display: flex;
-      justify-content: center;
+  }
+  
+  #TIT {
+    color: white;
+    display: flex;
+    justify-content: center;
+    font-family: "Bebas Neue", sans-serif, monospace;
+    font-weight: 400;
+    font-style: oblique;
+    font-size: 50px;
+    #pred {
+      color: #c20000;
       font-family: "Bebas Neue", sans-serif, monospace;
       font-weight: 400;
-      font-style: oblique;
-      font-size: 50px;
-
-      #pred {
-        color: #c20000;
-        font-family: "Bebas Neue", sans-serif, monospace;
-        font-weight: 400;
-        font-size: 50px;
+    }
+  }
+}
+  main {
+    .container-card {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-around;
+    }
+    .container-card .card {
+      padding: 3%;
+      width: 25%;
+      float: left;
+      box-sizing: border-box;
+      text-align: center;
+      position: relative;
+      cursor: pointer;
+    }
+    .card .box {
+      width: auto;
+      height: 100%;
+      transition: 0.5s;
+      transition: transform 0.5s ease;
+      &:hover {
+        transform: scale(1.1);
       }
     }
-  }
-}
-main {
-  .slider--inner {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    .slider--img {
+    .card.box.box1 {
+      position: relative;
+      background: #6a0115;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 1;
+      transform: translateY(10%);
+    }
+    .card:hover .box.box1 {
+      opacity: 0.5;
+      transform: translateY(0);
+    }
+    .content {
+      img {
       width: 100%;
-      height: 22vw;
+      height: 15vw;
     }
   }
-
-  .slider {
-    overflow: hidden;
-    display: none;
-  }
-  .container-card {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  .container-card .card {
-    padding: 3%;
-    width: 25%;
-    float: left;
-    box-sizing: border-box;
-    text-align: center;
-    position: relative;
-    cursor: pointer;
-  }
-  .card .box {
-    width: auto;
-    height: auto;
-    transition: 0.5s;
-    transition: transform 0.5s ease;
-    &:hover {
-      transform: scale(1.1);
+    .card.box.box2 {
+      height: 50%;
+      position: relative;
+      background: #6a0115;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-sizing: border-box;
+      transform: translateY(10%);
     }
-  }
-  .card.box.box1 {
-    position: relative;
-    background: #6a0115;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1;
-    transform: translateY(10%);
-  }
-  .card:hover .box.box1 {
-    opacity: 0.5;
-    transform: translateY(0);
-  }
-  .content {
-    img {
-    width: 100%;
-    height: 15vw;
-  }
+    .box.box2{
+      height: 25%;
+    }
+    .card:hover .box.box2 {
+      box-shadow: 0 2px 15px 2px #fff;
+      transform: translateY(0);
+    }
+  
 }
-  .content h3 {
-    position: relative;
-    top: -24px;
-    text-align: center;
-  }
-  .card.box.box2 {
-    position: relative;
-    background: #6a0115;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-sizing: border-box;
-    transform: translateY(10%);
-  }
-  .card:hover .box.box2 {
-    box-shadow: 0 2px 15px 2px #fff;
-    transform: translateY(0);
-  }
 }
