--- a/style.css
+++ b/style.css
@@ -36,68 +36,80 @@ header {
     width: 65px;
     align-items: center;
   }
-}
-#headerright {
-  width: 50%;
-  display: flex;
-  justify-content: end;
-  align-items: center;
-  input {
-    width: 60%;
-    border: none;
-    cursor: pointer;
+
+  #headerright {
+    width: 50%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    input {
+      width: 60%;
+      border: none;
+      cursor: pointer;
+    }
+    button {
+      height: 100%;
+      border: none;
+      cursor: pointer;
+      background-color: #6a0115;
+      img {
+        display: flex;
+        justify-content: end;
+        border-radius: 25%;
+        width: 40px;
+        align-items: center;
+      }
+    }
   }
-  button {
-    height: 100%;
-    border: none;
-    cursor: pointer;
-    background-color: #6a0115;
+  #logocont {
     img {
       display: flex;
       justify-content: end;
       border-radius: 25%;
-      width: 40px;
+      width: 65px;
       align-items: center;
     }
   }
-}
-#logocont {
-  img {
-    display: flex;
-    justify-content: end;
-    border-radius: 25%;
-    width: 65px;
-    align-items: center;
-  }
-}
 
-#TIT {
-  color: white;
-  justify-content: center;
-  font-family: "Bebas Neue", sans-serif, monospace;
-  font-weight: 400;
-  font-style: oblique;
-  font-size: 50px;
-
-  #pred {
-    color: #c20000;
+  #TIT {
+    color: white;
+    justify-content: center;
     font-family: "Bebas Neue", sans-serif, monospace;
     font-weight: 400;
+    font-style: oblique;
+    font-size: 50px;
+
+    #pred {
+      color: #c20000;
+      font-family: "Bebas Neue", sans-serif, monospace;
+      font-weight: 400;
+    }
   }
 }
-
-
 main {
+  h1 {
+    text-align: center;
+    margin-top: 10%;
+    font-family: "Bebas Neue", sans-serif;
+    color: white;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 45px;
+  }
   .container-card {
     width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    color: white;
+    text-align: center;
   }
-  .container-card .card {
+  .card {
+    width: 100%;
     padding: 3%;
-    width: 50%;
+    margin: 10%;
+    height: 50vw;
     float: left;
     box-sizing: border-box;
     text-align: center;
@@ -105,7 +117,8 @@ main {
     cursor: pointer;
   }
   .card .box {
-    width: auto;
+    width: 100%;
+    height: 50%;
     transition: 0.5s;
     transition: transform 0.5s ease;
     &:hover {
@@ -114,6 +127,10 @@ main {
   }
   .box.box1 {
     height: 80%;
+    img {
+      width: 50%;
+      height: 25vw;
+    }
   }
   .card.box.box1 {
     position: relative;
@@ -130,14 +147,12 @@ main {
     transform: translateY(0);
   }
   .content {
-    img {
-    width: 100%;
-    height: 15vw;
+    height: 50%;
+
   }
-} 
-  .box.box2{
-  height: 50%;  
-  } 
+  .box.box2 {
+    height: 50%;
+  }
   .card.box.box2 {
     position: relative;
     background: #6a0115;
@@ -152,57 +167,7 @@ main {
     transform: translateY(0);
   }
 
-
-#art1 {
-  margin-bottom: 50%;
-}
-h1 {
-  margin-top: 10%;
-  font-family: "Bebas Neue", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 45px;
-}
-
-.articulos {
-  color: white;
-  margin-bottom: 15%;
-  display: grid;
-  grid-template-columns: 49% 49%;
-  row-gap: 2%;
-  column-gap: 2%;
-  text-align: center;
-
-  img {
-    width: 100%;
-    height: 45%;
-  }
-
-  .articulos:hover {
-    background-color: gray;
-    padding: 2%;
-  }
-  .articulosdestacados {
-    font-size: 16px;
-    background-color: rgb(0, 0, 0);
-    border: 2px solid rgb(173, 160, 160);
-    border-radius: 10%;
-    height: 110%;
-  }
-  .articulosnormales {
-    text-align: center;
-    font-size: 16px;
-    background-color: rgb(0, 0, 0);
-    border: 2px solid rgb(173, 160, 160);
-    border-radius: 10%;
-    height: 110%;
-  }
-}
-#mainstart {
-  color: white;
-  text-align: center;
   .referencia {
-    height: 20%;
     width: 100%;
     align-items: center;
   }
@@ -210,66 +175,81 @@ h1 {
   .precio {
     background-color: #c20000;
     font-family: "Times New Roman", Times, serif;
+    height: 50%;
   }
+
   .comprar {
     display: flex;
     width: 100%;
-    height: 15%;
+    height: 50%;
     justify-content: center;
     align-items: center;
   }
-  .botoncompra {
+
+  .btncr {
     display: flex;
     align-items: center;
     margin-top: 4%;
-    color: black;
+    color: white;
     text-decoration: none;
-    background-color: white;
+    background-color: #6a0115;
     border-radius: 25%;
     height: 50%;
   }
-  .botoncompra:hoover {
-    background-color: gray;
-    padding: 2%;
-  }
 }
+.contactanos {
+  margin-top: 15%;
+  color: white;
+  text-align: center;
 }
 
 @media (min-width: 768px) {
-  header{
-  #headercontainer{
-    height: 5vw;
-  }
-  #headerright {
-    width: 50%;
-    input {
-      width: 60%;
+  header {
+    #headercontainer {
+      height: 5vw;
+    }
+    #headerright {
+      width: 50%;
+      input {
+        width: 60%;
+      }
     }
 
+    #TIT {
+      display: flex;
+    }
   }
-  
-  #TIT {
-    display: flex;
- }
-}
   main {
     .container-card .card {
       width: 25%;
+      margin: 0%;
+
     }
     .card .box {
-      height: 100%;
+      height: 50%;
+      img {
+        width: 100%;
+        height: 15vw;
+      }
     }
 
     .content {
-      img {
-      width: 100%;
-      height: 15vw;
-    }
-  }
+      height: 100%;
 
-    .box.box2{
+    }
+
+    .box.box2 {
       height: 25%;
     }
-
-}
+    .precio {
+      height: 30%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .comprar {
+      height: 70%;
+    }
+  }
 }
