--- a/carrito.css
+++ b/carrito.css
@@ -28,13 +28,13 @@ header {
       font-style: normal;
       font-size: 25px;
     }
-  }
-  img {
-    display: flex;
-    justify-content: end;
-    border-radius: 25%;
-    width: 65px;
-    align-items: center;
+    img {
+      display: flex;
+      justify-content: end;
+      border-radius: 25%;
+      width: 40px;
+      align-items: center;
+    }
   }
 
   #headerright {
@@ -99,7 +99,7 @@ main {
   .container-card {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     justify-content: space-around;
     color: white;
@@ -109,7 +109,6 @@ main {
     border: #6a0115 solid;
     width: 100%;
     padding: 3%;
-    margin: 5%;
     height: 50vw;
     display: flex;
     box-sizing: border-box;
@@ -161,7 +160,6 @@ main {
 
   }
   .box.box2 {
-
     height: 100%;
   }
   .card:hover .box.box2 {
@@ -220,36 +218,35 @@ main {
     }
   }
   main {
+    .container-card{
+      width: 100%;
+      align-items: center;
+      flex-direction: column;
+      justify-content:center ;
+    }
     .container-card .card {
-      width: 25%;
       margin: 0%;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 50%;
 
     }
     .card .box {
-      height: 50%;
       img {
-        width: 100%;
+        width: 50%;
         height: 15vw;
       }
     }
-
-    .content {
-      height: 100%;
-
-    }
-
-    .box.box2 {
-      height: 25%;
-    }
     .precio {
-      height: 30%;
+      height: 50%;
       display: flex;
       justify-content: center;
       align-items: center;
     }
   
     .comprar {
-      height: 70%;
+      height: 50%;
     }
   }
 }
