--- a/carrito.css
+++ b/carrito.css
@@ -185,7 +185,9 @@ main {
     align-items: center;
   }
 
-  .botoncompra {
+  .btn{
+
+    
     display: flex;
     align-items: center;
     margin-top: 4%;
@@ -224,21 +226,33 @@ main {
       flex-direction: column;
       justify-content:center ;
     }
+    .card {
+      height: 25%;
+    }
     .container-card .card {
       margin: 0%;
       justify-content: center;
       align-items: center;
-      width: 100%;
-      height: 50%;
+      width: 50%;
+      height: 25%;
 
     }
+    .content{
+      height: 100%;
+    }
+    .box.box2{
+      height: 100%;
+    }
     .card .box {
+      width: 50%;
+      height: 25%;
       img {
         width: 50%;
         height: 15vw;
       }
     }
     .precio {
+      color: white;
       height: 50%;
       display: flex;
       justify-content: center;
